--- a/sass/block-styles/_life.scss
+++ b/sass/block-styles/_life.scss
@@ -2,12 +2,12 @@
   @include list-styles();
   display: block;
   background-color: $background-color--lightest;
-  padding: 25px 25px 20px 25px;
+  padding: 5px 0 35px;
 
   @media (min-width: $breakpoint-tablet) {
     display: flex;
     width: 100%;
-    padding: 0;
+    padding: 2px 0 0 0;
     min-height: 330px;
   }
 }
@@ -16,13 +16,29 @@
   display: block;
   box-sizing: border-box;
   min-width: 275px;
-  margin: 0 auto 18px auto;
-  padding: 0 0 0 45px;
+  margin: 0 auto;
   text-align: left;
+
+  @media (min-width: $breakpoint-tablet) {
+    min-width: 33.3%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+
+    &--souvenirs {
+      order: 1;
+    }
+  }
+}
+
+.life__leader {
+  margin: 0;
+  padding: 30px 0 14px 70px;
 
   &--living {
     background-image: url("../img/icon-house.svg");
-    background-size: 14%;
+    background-size: 11.5%;
+    background-position: 7% 60%;
 
     @media (min-width: $breakpoint-tablet) {
       background-size: 30%;
@@ -35,8 +51,8 @@
 
   &--souvenirs {
     background-image: url("../img/icon-gift.svg");
-    background-size: 12%;
-    order: 1;
+    background-size: 9.5%;
+    background-position: 8% 59%;
 
     @media (min-width: $breakpoint-tablet) {
       background-size: 25%;
@@ -49,8 +65,8 @@
 
   &--food {
     background-image: url("../img/icon-burger.svg");
-    background-size: 14%;
-    background-position: 0 8%;
+    background-size: 12%;
+    background-position: 6% 65%;
 
     @media (min-width: $breakpoint-tablet) {
       background-size: 30%;
@@ -63,21 +79,9 @@
   background-repeat: no-repeat;
 
   @media (min-width: $breakpoint-tablet) {
-    min-width: 33.3%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-position: center 24%;
-  }
-}
-
-.life__leader {
-  margin: 0;
-  padding: 10px 0 0 0;
-
-  @media (min-width: $breakpoint-tablet) {
     font-size: $font-size--large;
     margin: 0;
-    padding: 157px 0 0;
+    padding: 155px 0 0;
+    background-position: center;
   }
 }
